--- a/index.html
+++ b/index.html
@@ -1,119 +1,45 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-	<meta charset="utf-8" />
-	<title>Tory Rust</title>
-    <link rel="stylesheet" href="assets/css/stylesheet.css" />
-	<style type="text/css">
-	.menu
-	{
-		position: fixed;
-		width: 250px;
-		height: 30px;
-		background: #455;
-		color: white;
-		left: 20px;
-		padding: 5px;
-	}
+  <meta charset="utf-8" />
+  <title>Tory Rust</title>
+  <link rel="stylesheet" href="assets/css/stylesheet.css" />
 
-	.menu a
-	{
-		display: inline-block;
-		margin-right: 20px;
-		color: white;
-	}
-
-	.elements
-	{
-		overflow: hidden;
-		width: 100%;
-		color: white;
-		position: absolute;
-		bottom: 0;
-		left: 0;
-	}
-
-	.el
-	{
-		float: left;
-		height: 300px;
-	}
-
-	/* .el1
-	{
-		width: 1200px;
-		background: red;
-	}
-
-	.el2
-	{
-		width: 1700px;
-		background: pink;
-	}
-
-	.el3
-	{
-		width: 1000px;
-		background: green;
-	}
-
-	.el4
-	{
-		width: 1900px;
-		background: blue;
-	} */
-	</style>
 </head>
+
 <body>
-    <h1>Tory Rust</h1>
 
-	<div class="menu">
-		<a href="#" data-target="el1">El1</a>
-		<a href="#" data-target="el2">El2</a>
-		<a href="#" data-target="el3">El3</a>
-		<a href="#" data-target="el4">El4</a>
-	</div>
-
-    <div class="horizon scroll">
-        <img src="assets/img/horizon.png" alt="" />
-    </div>
-    <div class="middle scroll">
-        <img src="assets/img/middle.png" alt="" />
-    </div>
-    <div class="front scroll">
-        <img src="assets/img/front.png" alt="" />
-		<div class="elements">
-			<div class="el el1"></div>
-			<div class="el el2"></div>
-			<div class="el el3"></div>
-			<div class="el el4"></div>
-		</div>
+    <div class="torylogo">
+      <img src="assets/img/LogoTory.png" alt="">
     </div>
 
-    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jInvertScroll/0.8.3/js/jquery.jInvertScroll.js"></script>
-    <script type="text/javascript">
-    (function($) {
-        $.jInvertScroll(['.scroll'],        // an array containing the selector(s) for the elements you want to animate
-            {
-            height: 6000,                   // optional: define the height the user can scroll, otherwise the overall length will be taken as scrollable height
-            onScroll: function(percent) {   //optional: callback function that will be called when the user scrolls down, useful for animating other things on the page
-            }
-        });
+  <div class="menu">
+    <a href="#" data-target="el1">El1</a>
+    <a href="#" data-target="el2">El2</a>
+    <a href="#" data-target="el3">El3</a>
+    <a href="#" data-target="el4">El4</a>
+  </div>
 
-		$('.menu a').on('click', function(e) {
-			e.preventDefault();
-			var target = '.'+$(this).data('target');
-			var left = $(target).position().left;
-			var total = $('.front.scroll').width();
-			var perc = left / (total - $(window).width()) * 100;
+  <div class="horizon scroll">
+    <img src="assets/img/horizon.png" alt="" />
+  </div>
+  <div class="middle scroll">
+    <img src="assets/img/middle.png" alt="" />
+  </div>
+  <div class="front scroll">
+    <img src="assets/img/front.png" alt="" />
+    <div class="elements">
+      <div class="el el1">  <img src="assets/img/tory1.jpg" alt="" /></div>
+      <div class="el el2"><img src="assets/img/tory1.jpg" alt="" /></div>
+      <!-- <div class="el el3"><img src="assets/img/tory1.jpg" alt="" /></div>
+      <div class="el el4"><img src="assets/img/tory1.jpg" alt="" /></div> -->
+    </div>
+  </div>
 
-			var height = $('html').height();
-			var final = ((height - $(window).height())/ 100 * perc);
-
-			$('html, body').animate({scrollTop: final}, 500);
-		});
-    }(jQuery));
-    </script>
+  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jInvertScroll/0.8.3/js/jquery.jInvertScroll.js"></script>
+  <script type="text/javascript" src="assets/js/index.js"></script>
 </body>
+
 </html>
