center logo with entrance animations

--- a/index.html
+++ b/index.html
@@ -13,13 +13,16 @@
     <div class="torylogo">
       <img src="assets/img/LogoTory.png" alt="">
     </div>
+    <div class="rustlogo">
+      <img src="assets/img/LogoRust.png" alt="">
+    </div>
 
-  <div class="menu">
+  <!-- <div class="menu">
     <a href="#" data-target="el1">El1</a>
     <a href="#" data-target="el2">El2</a>
     <a href="#" data-target="el3">El3</a>
     <a href="#" data-target="el4">El4</a>
-  </div>
+  </div> -->
 
   <div class="horizon scroll">
     <img src="assets/img/horizon.png" alt="" />
