working on logo position

--- a/index.html
+++ b/index.html
@@ -10,12 +10,16 @@
 
 <body>
 
+  <div class="intropage">
     <div class="torylogo">
-      <img src="assets/img/LogoTory.png" alt="">
+      <img src="assets/img/logos/LogoTory.png" alt="">
     </div>
     <div class="rustlogo">
-      <img src="assets/img/LogoRust.png" alt="">
+      <img src="assets/img/logos/LogoRust.png" alt="">
     </div>
+    <div class"intro1">
+    </div>
+  </div>
 
   <!-- <div class="menu">
     <a href="#" data-target="el1">El1</a>
@@ -33,7 +37,7 @@
   <div class="front scroll">
     <img src="assets/img/front.png" alt="" />
     <div class="elements">
-      <div class="el el1">  <img src="assets/img/tory1.jpg" alt="" /></div>
+      <div class="el el1"> <img src="assets/img/tory1.jpg" alt="" /></div>
       <div class="el el2"><img src="assets/img/tory1.jpg" alt="" /></div>
       <!-- <div class="el el3"><img src="assets/img/tory1.jpg" alt="" /></div>
       <div class="el el4"><img src="assets/img/tory1.jpg" alt="" /></div> -->
