--- a/index.html
+++ b/index.html
@@ -10,14 +10,24 @@
 
 <body>
 
+<div class="background-image">
   <div class="intropage">
-    <div class="torylogo">
-      <img src="assets/img/logos/LogoTory.png" alt="">
-    </div>
     <div class="rustlogo">
       <img src="assets/img/logos/LogoRust.png" alt="">
     </div>
-    <div class"intro1">
+    <div class="imgcolumn1">
+      <img class="image1" src="assets/img/intro/intro1.jpg" alt="">
+      <img class="image2" src="assets/img/intro/intro2.jpg" alt="">
+      <img class="image3" src="assets/img/intro/intro3.jpg" alt="">
+    </div>
+    <div class="torylogo">
+      <img src="assets/img/logos/LogoTory.png" alt="">
+    </div>
+    <div class="imgcolumn2">
+      <img class="image4" src="assets/img/intro/intro4.jpg" alt="">
+      <img class="image5" src="assets/img/intro/intro5.jpg" alt="">
+      <img class="image6" src="assets/img/intro/intro6.jpg" alt="">
+      <img class="image7" src="assets/img/intro/intro7.jpg" alt="">
     </div>
   </div>
 
@@ -28,7 +38,7 @@
     <a href="#" data-target="el4">El4</a>
   </div> -->
 
-  <div class="horizon scroll">
+  <!-- <div class="horizon scroll">
     <img src="assets/img/horizon.png" alt="" />
   </div>
   <div class="middle scroll">
@@ -39,11 +49,11 @@
     <div class="elements">
       <div class="el el1"> <img src="assets/img/tory1.jpg" alt="" /></div>
       <div class="el el2"><img src="assets/img/tory1.jpg" alt="" /></div>
-      <!-- <div class="el el3"><img src="assets/img/tory1.jpg" alt="" /></div>
-      <div class="el el4"><img src="assets/img/tory1.jpg" alt="" /></div> -->
+      <div class="el el3"><img src="assets/img/tory1.jpg" alt="" /></div>
+      <div class="el el4"><img src="assets/img/tory1.jpg" alt="" /></div>
     </div>
   </div>
-
+</div> -->
   <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jInvertScroll/0.8.3/js/jquery.jInvertScroll.js"></script>
   <script type="text/javascript" src="assets/js/index.js"></script>
