--- a/index.html
+++ b/index.html
@@ -36,16 +36,16 @@
     <a href="#" data-target="el2">El2</a>
     <a href="#" data-target="el3">El3</a>
     <a href="#" data-target="el4">El4</a>
-  </div> -->
+  </div>
 
-  <!-- <div class="horizon scroll">
-    <img src="assets/img/horizon.png" alt="" />
+  <div class="horizon scroll">
+
   </div>
   <div class="middle scroll">
     <img src="assets/img/middle.png" alt="" />
-  </div>
-  <div class="front scroll">
-    <img src="assets/img/front.png" alt="" />
+  </div> -->
+  <div class="middle scroll">
+    <!-- <img src="assets/img/front.png" alt="" /> -->
     <div class="elements">
       <div class="el el1"> <img src="assets/img/tory1.jpg" alt="" /></div>
       <div class="el el2"><img src="assets/img/tory1.jpg" alt="" /></div>
@@ -53,7 +53,7 @@
       <div class="el el4"><img src="assets/img/tory1.jpg" alt="" /></div>
     </div>
   </div>
-</div> -->
+</div>
   <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jInvertScroll/0.8.3/js/jquery.jInvertScroll.js"></script>
   <script type="text/javascript" src="assets/js/index.js"></script>
