adjust logo to scroll horizontally

--- a/index.html
+++ b/index.html
@@ -5,55 +5,51 @@
   <meta charset="utf-8" />
   <title>Tory Rust</title>
   <link rel="stylesheet" href="assets/css/stylesheet.css" />
-
 </head>
-
+<!-- welcome page with photos -->
 <body>
-
-<div class="background-image">
-  <div class="intropage">
-    <div class="rustlogo">
-      <img src="assets/img/logos/LogoRust.png" alt="">
+  <div class="background-image">
+    <div class="intropage">
+      <div class="imgcolumn1">
+        <img class="image1" src="assets/img/intro/intro1.jpg" alt="">
+        <img class="image2" src="assets/img/intro/intro2.jpg" alt="">
+        <img class="image3" src="assets/img/intro/intro3.jpg" alt="">
+      </div>
+      <div class="imgcolumn2">
+        <img class="image4" src="assets/img/intro/intro4.jpg" alt="">
+        <img class="image5" src="assets/img/intro/intro5.jpg" alt="">
+        <img class="image6" src="assets/img/intro/intro6.jpg" alt="">
+        <img class="image7" src="assets/img/intro/intro7.jpg" alt="">
+      </div>
     </div>
-    <div class="imgcolumn1">
-      <img class="image1" src="assets/img/intro/intro1.jpg" alt="">
-      <img class="image2" src="assets/img/intro/intro2.jpg" alt="">
-      <img class="image3" src="assets/img/intro/intro3.jpg" alt="">
-    </div>
-    <div class="torylogo">
-      <img src="assets/img/logos/LogoTory.png" alt="">
-    </div>
-    <div class="imgcolumn2">
-      <img class="image4" src="assets/img/intro/intro4.jpg" alt="">
-      <img class="image5" src="assets/img/intro/intro5.jpg" alt="">
-      <img class="image6" src="assets/img/intro/intro6.jpg" alt="">
-      <img class="image7" src="assets/img/intro/intro7.jpg" alt="">
-    </div>
-  </div>
-
-  <!-- <div class="menu">
+<!-- navigation - In progress-->
+    <div class="menu">
     <a href="#" data-target="el1">El1</a>
     <a href="#" data-target="el2">El2</a>
     <a href="#" data-target="el3">El3</a>
     <a href="#" data-target="el4">El4</a>
   </div>
 
-  <div class="horizon scroll">
-
-  </div>
-  <div class="middle scroll">
-    <img src="assets/img/middle.png" alt="" />
-  </div> -->
-  <div class="middle scroll">
-    <!-- <img src="assets/img/front.png" alt="" /> -->
-    <div class="elements">
-      <div class="el el1"> <img src="assets/img/tory1.jpg" alt="" /></div>
-      <div class="el el2"><img src="assets/img/tory1.jpg" alt="" /></div>
-      <div class="el el3"><img src="assets/img/tory1.jpg" alt="" /></div>
-      <div class="el el4"><img src="assets/img/tory1.jpg" alt="" /></div>
+<!-- intro logo section -->
+    <div class="horizon scroll">
+      <div class="rustlogo">
+        <img src="assets/img/logos/LogoRust.png" alt="">
+      </div>
+      <div class="torylogo">
+        <img src="assets/img/logos/LogoTory.png" alt="">
+      </div>
+    </div>
+    <div class="front scroll">
+      <div class="elements">
+        <div class="el el1"> <img src="assets/img/tory1.jpg" alt="" /></div>
+        <div class="el el2"><img src="assets/img/tory1.jpg" alt="" /></div>
+        <div class="el el3"><img src="assets/img/tory1.jpg" alt="" /></div>
+        <div class="el el4"><img src="assets/img/tory1.jpg" alt="" /></div>
+      </div>
     </div>
   </div>
-</div>
+  </div>
+  <!-- prerequisites -->
   <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jInvertScroll/0.8.3/js/jquery.jInvertScroll.js"></script>
   <script type="text/javascript" src="assets/js/index.js"></script>
