make changes to nav

--- a/index.html
+++ b/index.html
@@ -22,16 +22,19 @@
         <img class="image7" src="assets/img/intro/intro7.jpg" alt="">
       </div>
     </div>
-<!-- navigation - In progress-->
-    <div class="menu">
-    <a href="#" data-target="el1">El1</a>
-    <a href="#" data-target="el2">El2</a>
-    <a href="#" data-target="el3">El3</a>
-    <a href="#" data-target="el4">El4</a>
-  </div>
+<!-- Side navigation -->
+<div class="sidenav">
+  <a href="#">Fashion</a>
+  <a href="#">Beauty</a>
+  <a href="#">Commissioned</a>
+  <a href="#">Cinemagraphs/GIFs</a>
+  <a href="#">Motion</a>
+  <a href="#">About + Contact</a>
+</div>
 
 <!-- intro logo section -->
-    <div class="horizon scroll">
+<div class="logo">
+    <div class="front">
       <div class="rustlogo">
         <img src="assets/img/logos/LogoRust.png" alt="">
       </div>
@@ -39,7 +42,8 @@
         <img src="assets/img/logos/LogoTory.png" alt="">
       </div>
     </div>
-    <div class="front scroll">
+</div>
+    <div class="middle scroll">
       <div class="elements">
         <div class="el el1"> <img src="assets/img/tory1.jpg" alt="" /></div>
         <div class="el el2"><img src="assets/img/tory1.jpg" alt="" /></div>
