intro page clean up

--- a/index.html
+++ b/index.html
@@ -7,41 +7,43 @@
   <link rel="stylesheet" href="assets/css/stylesheet.css" />
 </head>
 <!-- welcome page with photos -->
+
 <body>
-  <div class="background-image">
-    <div class="intropage">
-      <div class="imgcolumn1">
-        <img class="image1" src="assets/img/intro/intro1.jpg" alt="">
-        <img class="image2" src="assets/img/intro/intro2.jpg" alt="">
-        <img class="image3" src="assets/img/intro/intro3.jpg" alt="">
-      </div>
-      <div class="imgcolumn2">
-        <img class="image4" src="assets/img/intro/intro4.jpg" alt="">
-        <img class="image5" src="assets/img/intro/intro5.jpg" alt="">
-        <img class="image6" src="assets/img/intro/intro6.jpg" alt="">
-        <img class="image7" src="assets/img/intro/intro7.jpg" alt="">
+  <div class="intropage">
+    <div class="imgcolumn1">
+      <img class="image1" src="assets/img/intro/intro1.jpg" alt="">
+      <img class="image2" src="assets/img/intro/intro2.jpg" alt="">
+      <img class="image3" src="assets/img/intro/intro3.jpg" alt="">
+    </div>
+    <div class="imgcolumn2">
+      <img class="image4" src="assets/img/intro/intro4c.jpg" alt="">
+      <img class="image5" src="assets/img/intro/intro5.jpg" alt="">
+      <img class="image6" src="assets/img/intro/intro6.jpg" alt="">
+      <img class="image7" src="assets/img/intro/intro7.jpg" alt="">
+    </div>
+    <!-- Side navigation -->
+    <div class="sidenav">
+      <a href="#">Fashion</a>
+      <a href="#">Beauty</a>
+      <a href="#">Commissioned</a>
+      <a href="#">Cinemagraphs/GIFs</a>
+      <a href="#">Motion</a>
+      <a href="#">About + Contact</a>
+    </div>
+    <!-- intro logo section -->
+    <div class="logo">
+      <div class="front">
+        <div class="rustlogo">
+          <img src="assets/img/logos/LogoRust.png" alt="">
+        </div>
+        <div class="torylogo">
+          <img src="assets/img/logos/LogoTory.png" alt="">
+        </div>
       </div>
     </div>
-<!-- Side navigation -->
-<div class="sidenav">
-  <a href="#">Fashion</a>
-  <a href="#">Beauty</a>
-  <a href="#">Commissioned</a>
-  <a href="#">Cinemagraphs/GIFs</a>
-  <a href="#">Motion</a>
-  <a href="#">About + Contact</a>
-</div>
-<!-- intro logo section -->
-<div class="logo">
-    <div class="front">
-      <div class="rustlogo">
-        <img src="assets/img/logos/LogoRust.png" alt="">
-      </div>
-      <div class="torylogo">
-        <img src="assets/img/logos/LogoTory.png" alt="">
-      </div>
-    </div>
-</div>
+  </div>
+  <!-- Overview page     -->
+  <div class="overviewpage">
     <div class="middle scroll">
       <div class="elements">
         <div class="el el1"> <img src="assets/img/tory1.jpg" alt="" /></div>
@@ -51,10 +53,11 @@
       </div>
     </div>
   </div>
-  </div>
+
   <!-- prerequisites -->
   <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jInvertScroll/0.8.3/js/jquery.jInvertScroll.js"></script>
   <script type="text/javascript" src="assets/js/index.js"></script>
 </body>
+
 </html>
