intro page work

--- a/index.html
+++ b/index.html
@@ -16,31 +16,29 @@
       <img class="image3" src="assets/img/intro/intro3.jpg" alt="">
     </div>
     <div class="imgcolumn2">
-      <img class="image4" src="assets/img/intro/intro4c.jpg" alt="">
+      <img class="image4" src="assets/img/intro/intro4.jpg" alt="">
       <img class="image5" src="assets/img/intro/intro5.jpg" alt="">
       <img class="image6" src="assets/img/intro/intro6.jpg" alt="">
       <img class="image7" src="assets/img/intro/intro7.jpg" alt="">
     </div>
-    <!-- Side navigation -->
-    <div class="sidenav">
-      <a href="#">Fashion</a>
-      <a href="#">Beauty</a>
-      <a href="#">Commissioned</a>
-      <a href="#">Cinemagraphs/GIFs</a>
-      <a href="#">Motion</a>
-      <a href="#">About + Contact</a>
-    </div>
     <!-- intro logo section -->
-    <div class="logo">
-      <div class="front">
-        <div class="rustlogo">
-          <img src="assets/img/logos/LogoRust.png" alt="">
-        </div>
-        <div class="torylogo">
-          <img src="assets/img/logos/LogoTory.png" alt="">
-        </div>
+    <div class="logopage">
+      <div class="rustlogo">
+        <img src="assets/img/logos/LogoRust.png" alt="">
+      </div>
+      <div class="torylogo">
+        <img src="assets/img/logos/LogoTory.png" alt="">
       </div>
     </div>
+  </div>
+  <!-- Side navigation -->
+  <div class="sidenav">
+    <img class="icon" src="assets/img/logos/Logo.png" alt=<a href="#">Fashion</a>
+    <a href="#">Beauty</a>
+    <a href="#">Commissioned</a>
+    <a href="#">Cinemagraphs/GIFs</a>
+    <a href="#">Motion</a>
+    <a href="#">About + Contact</a>
   </div>
   <!-- Overview page     -->
   <div class="overviewpage">
