--- a/index.html
+++ b/index.html
@@ -33,21 +33,49 @@
   </div>
   <!-- Side navigation -->
   <div class="sidenav">
-    <img class="icon" src="assets/img/logos/Logo.png" alt=<a href="#">Fashion</a>
-    <a href="#">Beauty</a>
-    <a href="#">Commissioned</a>
-    <a href="#">Cinemagraphs/GIFs</a>
-    <a href="#">Motion</a>
-    <a href="#">About + Contact</a>
+    <img class="icon" src="assets/img/logos/Logo.png" alt="">
+    <a href="#"><span>F A S H I O N</span></a>
+    <a href="#"><span>B E A U T Y</span></a>
+    <a href="#"><span>C O M M I S S I O N E D</span></a>
+    <a href="#"><span>C I N E M A G R A P H S / G I F s</span></a>
+    <a href="#"><span>M O T I O N</span></a>
+    <a href="#"><span>A B O U T + C O N T A C T</span></a>
   </div>
   <!-- Overview page     -->
   <div class="overviewpage">
     <div class="middle scroll">
-      <div class="elements">
-        <div class="el el1"> <img src="assets/img/tory1.jpg" alt="" /></div>
-        <div class="el el2"><img src="assets/img/tory1.jpg" alt="" /></div>
-        <div class="el el3"><img src="assets/img/tory1.jpg" alt="" /></div>
-        <div class="el el4"><img src="assets/img/tory1.jpg" alt="" /></div>
+      <div class="photos">
+        <table>
+          <tr>
+            <th class="filler"></th>
+            <th><img src="assets/img/overview/ov1.jpg" alt="" /></th>
+            <th>
+
+              <div><img class="stack" src="assets/img/overview/ov2.jpg" alt="" /></div>
+              <div><img class="stack"src="assets/img/overview/ov3.jpg" alt="" /></div>
+            </th>
+            <th><img src="assets/img/overview/ov3.jpg" alt="" /></th>
+            <th><img src="assets/img/overview/ov4.jpg" alt="" /></th>
+            <th><img src="assets/img/overview/ov5.jpg" alt="" /></th>
+            <th><img src="assets/img/overview/ov6.jpg" alt="" /></th>
+            <th><img src="assets/img/overview/ov7.jpg" alt="" /></th>
+          </tr>
+          <tr>
+            <td class="filler"></td>
+            <td><img src="assets/img/overview/ov8.jpg" alt="" /></td>
+            <td><img src="assets/img/overview/ov9.jpg" alt="" /></td>
+            <td><img src="assets/img/overview/ov10.jpg" alt="" /></td>
+            <td><img src="assets/img/overview/ov11.jpg" alt="" /></td>
+            <td><img src="assets/img/overview/ov12.jpg" alt="" /></td>
+            <td><img src="assets/img/overview/ov13.jpg" alt="" /></td>
+            <td><img src="assets/img/overview/ov14.jpg" alt="" /></td>
+          </tr>
+          <tr>
+            <td class="filler"></td>
+            <td><img src="assets/img/overview/ov5.jpg" alt="" /></td>
+            <td><img src="assets/img/overview/ov6.jpg" alt="" /></td>
+          </tr>
+        </table>
       </div>
     </div>
   </div>
