--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   <!-- Side navigation -->
   <div class="sidenav">
     <img class="icon" src="assets/img/logos/Logo.png" alt="">
-    <a href="#"><span>F A S H I O N</span></a>
+    <a onclick="myFunction()" href="#"><span>F A S H I O N</span></a>
     <a href="#"><span>B E A U T Y</span></a>
     <a href="#"><span>C O M M I S S I O N E D</span></a>
     <a href="#"><span>C I N E M A G R A P H S / G I F s</span></a>
