--- a/index.html
+++ b/index.html
@@ -34,50 +34,281 @@
   <!-- Side navigation -->
   <div class="sidenav">
     <img class="icon" src="assets/img/logos/Logo.png" alt="">
-    <a onclick="myFunction()" href="#"><span>F A S H I O N</span></a>
-    <a href="#"><span>B E A U T Y</span></a>
-    <a href="#"><span>C O M M I S S I O N E D</span></a>
-    <a href="#"><span>C I N E M A G R A P H S / G I F s</span></a>
-    <a href="#"><span>M O T I O N</span></a>
-    <a href="#"><span>A B O U T + C O N T A C T</span></a>
+    <a class="overview-link"><span>O V E R V I E W</span></a>
+    <a class="fashion-link"><span>F A S H I O N</span></a>
+    <a class="beauty-link"><span>B E A U T Y</span></a>
+    <a class="commissioned-link"><span>C O M M I S S I O N E D</span></a>
+    <a class="cinemagraphsgifs-link"><span>C I N E M A G R A P H S / G I F s</span></a>
+    <a class="motion-link"><span>M O T I O N</span></a>
+    <a class="about-link"><span>A B O U T + C O N T A C T</span></a>
   </div>
-  <!-- Overview page     -->
-  <div class="overviewpage">
-    <div class="middle scroll">
-      <div class="photos">
-        <table>
-          <tr>
-            <th class="filler"></th>
-            <th><img src="assets/img/overview/ov1.jpg" alt="" /></th>
-            <th>
 
-              <div><img class="stack" src="assets/img/overview/ov2.jpg" alt="" /></div>
-              <div><img class="stack"src="assets/img/overview/ov3.jpg" alt="" /></div>
-            </th>
-            <th><img src="assets/img/overview/ov3.jpg" alt="" /></th>
-            <th><img src="assets/img/overview/ov4.jpg" alt="" /></th>
-            <th><img src="assets/img/overview/ov5.jpg" alt="" /></th>
-            <th><img src="assets/img/overview/ov6.jpg" alt="" /></th>
-            <th><img src="assets/img/overview/ov7.jpg" alt="" /></th>
-          </tr>
-          <tr>
-            <td class="filler"></td>
-            <td><img src="assets/img/overview/ov8.jpg" alt="" /></td>
-            <td><img src="assets/img/overview/ov9.jpg" alt="" /></td>
-            <td><img src="assets/img/overview/ov10.jpg" alt="" /></td>
-            <td><img src="assets/img/overview/ov11.jpg" alt="" /></td>
-            <td><img src="assets/img/overview/ov12.jpg" alt="" /></td>
-            <td><img src="assets/img/overview/ov13.jpg" alt="" /></td>
-            <td><img src="assets/img/overview/ov14.jpg" alt="" /></td>
-          </tr>
-          <tr>
-            <td class="filler"></td>
-            <td><img src="assets/img/overview/ov5.jpg" alt="" /></td>
-            <td><img src="assets/img/overview/ov6.jpg" alt="" /></td>
-          </tr>
-        </table>
+  <div class="pages">
+    <!-- Overview page     -->
+    <div class="overview">
+      <div class="middle scroll">
+        <div class="photos">
+          <table>
+            <tr>
+              <th class="filler"></th>
+              <th><img src="assets/img/overview/ov1.jpg" alt="" /></th>
+              <th>
+
+                <div><img class="stack" src="assets/img/overview/ov2.jpg" alt="" /></div>
+                <div><img class="stack" src="assets/img/overview/ov3.jpg" alt="" /></div>
+              </th>
+              <th><img src="assets/img/overview/ov3.jpg" alt="" /></th>
+              <th><img src="assets/img/overview/ov4.jpg" alt="" /></th>
+              <th><img src="assets/img/overview/ov5.jpg" alt="" /></th>
+              <th><img src="assets/img/overview/ov6.jpg" alt="" /></th>
+              <th><img src="assets/img/overview/ov7.jpg" alt="" /></th>
+            </tr>
+            <tr>
+              <td class="filler"></td>
+              <td><img src="assets/img/overview/ov8.jpg" alt="" /></td>
+              <td><img src="assets/img/overview/ov9.jpg" alt="" /></td>
+              <td><img src="assets/img/overview/ov10.jpg" alt="" /></td>
+              <td><img src="assets/img/overview/ov11.jpg" alt="" /></td>
+              <td><img src="assets/img/overview/ov12.jpg" alt="" /></td>
+              <td><img src="assets/img/overview/ov13.jpg" alt="" /></td>
+              <td><img src="assets/img/overview/ov14.jpg" alt="" /></td>
+            </tr>
+            <tr>
+              <td class="filler"></td>
+              <td><img src="assets/img/overview/ov5.jpg" alt="" /></td>
+              <td><img src="assets/img/overview/ov6.jpg" alt="" /></td>
+            </tr>
+          </table>
+        </div>
       </div>
     </div>
+
+    <div class="fashion">
+      <div class="horizon scroll">
+        <div class="photos">
+          <table>
+            <tr>
+              <th class="filler"></th>
+              <th><img src="assets/img/fashion/fashion.jpg" alt="" /></th>
+              <th>
+
+                <div><img class="stack" src="assets/img/overview/ov2.jpg" alt="" /></div>
+                <div><img class="stack" src="assets/img/overview/ov3.jpg" alt="" /></div>
+              </th>
+              <th><img src="assets/img/overview/ov3.jpg" alt="" /></th>
+              <th><img src="assets/img/overview/ov4.jpg" alt="" /></th>
+              <th><img src="assets/img/overview/ov5.jpg" alt="" /></th>
+              <th><img src="assets/img/overview/ov6.jpg" alt="" /></th>
+              <th><img src="assets/img/overview/ov7.jpg" alt="" /></th>
+            </tr>
+            <tr>
+              <td class="filler"></td>
+              <td><img src="assets/img/overview/ov8.jpg" alt="" /></td>
+              <td><img src="assets/img/overview/ov9.jpg" alt="" /></td>
+              <td><img src="assets/img/overview/ov10.jpg" alt="" /></td>
+              <td><img src="assets/img/overview/ov11.jpg" alt="" /></td>
+              <td><img src="assets/img/overview/ov12.jpg" alt="" /></td>
+              <td><img src="assets/img/overview/ov13.jpg" alt="" /></td>
+              <td><img src="assets/img/overview/ov14.jpg" alt="" /></td>
+            </tr>
+            <tr>
+              <td class="filler"></td>
+              <td><img src="assets/img/overview/ov5.jpg" alt="" /></td>
+              <td><img src="assets/img/overview/ov6.jpg" alt="" /></td>
+            </tr>
+          </table>
+        </div>
+      </div>
+    </div>
+    <div class="beauty">
+      <div class="middle scroll">
+        <div class="photos">
+          <table>
+            <tr>
+              <th class="filler"></th>
+              <th><img src="assets/img/beauty/beauty.jpg" alt="" /></th>
+              <th>
+
+                <div><img class="stack" src="assets/img/overview/ov2.jpg" alt="" /></div>
+                <div><img class="stack" src="assets/img/overview/ov3.jpg" alt="" /></div>
+              </th>
+              <th><img src="assets/img/overview/ov3.jpg" alt="" /></th>
+              <th><img src="assets/img/overview/ov4.jpg" alt="" /></th>
+              <th><img src="assets/img/overview/ov5.jpg" alt="" /></th>
+              <th><img src="assets/img/overview/ov6.jpg" alt="" /></th>
+              <th><img src="assets/img/overview/ov7.jpg" alt="" /></th>
+            </tr>
+            <tr>
+              <td class="filler"></td>
+              <td><img src="assets/img/overview/ov8.jpg" alt="" /></td>
+              <td><img src="assets/img/overview/ov9.jpg" alt="" /></td>
+              <td><img src="assets/img/overview/ov10.jpg" alt="" /></td>
+              <td><img src="assets/img/overview/ov11.jpg" alt="" /></td>
+              <td><img src="assets/img/overview/ov12.jpg" alt="" /></td>
+              <td><img src="assets/img/overview/ov13.jpg" alt="" /></td>
+              <td><img src="assets/img/overview/ov14.jpg" alt="" /></td>
+            </tr>
+            <tr>
+              <td class="filler"></td>
+              <td><img src="assets/img/overview/ov5.jpg" alt="" /></td>
+              <td><img src="assets/img/overview/ov6.jpg" alt="" /></td>
+            </tr>
+          </table>
+        </div>
+      </div>
+    </div>
+    <div class="commissioned">
+      <div class="middle scroll">
+        <div class="photos">
+          <table>
+            <tr>
+              <th class="filler"></th>
+              <th><img src="assets/img/commissioned/commissioned.jpg" alt="" /></th>
+              <th>
+
+                <div><img class="stack" src="assets/img/overview/ov2.jpg" alt="" /></div>
+                <div><img class="stack" src="assets/img/overview/ov3.jpg" alt="" /></div>
+              </th>
+              <th><img src="assets/img/overview/ov3.jpg" alt="" /></th>
+              <th><img src="assets/img/overview/ov4.jpg" alt="" /></th>
+              <th><img src="assets/img/overview/ov5.jpg" alt="" /></th>
+              <th><img src="assets/img/overview/ov6.jpg" alt="" /></th>
+              <th><img src="assets/img/overview/ov7.jpg" alt="" /></th>
+            </tr>
+            <tr>
+              <td class="filler"></td>
+              <td><img src="assets/img/overview/ov8.jpg" alt="" /></td>
+              <td><img src="assets/img/overview/ov9.jpg" alt="" /></td>
+              <td><img src="assets/img/overview/ov10.jpg" alt="" /></td>
+              <td><img src="assets/img/overview/ov11.jpg" alt="" /></td>
+              <td><img src="assets/img/overview/ov12.jpg" alt="" /></td>
+              <td><img src="assets/img/overview/ov13.jpg" alt="" /></td>
+              <td><img src="assets/img/overview/ov14.jpg" alt="" /></td>
+            </tr>
+            <tr>
+              <td class="filler"></td>
+              <td><img src="assets/img/overview/ov5.jpg" alt="" /></td>
+              <td><img src="assets/img/overview/ov6.jpg" alt="" /></td>
+            </tr>
+          </table>
+        </div>
+      </div>
+    </div>
+    <div class="cinemagraphsgifs">
+      <div class="middle scroll">
+        <div class="photos">
+          <table>
+            <tr>
+              <th class="filler"></th>
+              <th><img src="assets/img/cinemagraphsgifs/cinemagraphsgif.jpg" alt="" /></th>
+              <th>
+
+                <div><img class="stack" src="assets/img/overview/ov2.jpg" alt="" /></div>
+                <div><img class="stack" src="assets/img/overview/ov3.jpg" alt="" /></div>
+              </th>
+              <th><img src="assets/img/overview/ov3.jpg" alt="" /></th>
+              <th><img src="assets/img/overview/ov4.jpg" alt="" /></th>
+              <th><img src="assets/img/overview/ov5.jpg" alt="" /></th>
+              <th><img src="assets/img/overview/ov6.jpg" alt="" /></th>
+              <th><img src="assets/img/overview/ov7.jpg" alt="" /></th>
+            </tr>
+            <tr>
+              <td class="filler"></td>
+              <td><img src="assets/img/overview/ov8.jpg" alt="" /></td>
+              <td><img src="assets/img/overview/ov9.jpg" alt="" /></td>
+              <td><img src="assets/img/overview/ov10.jpg" alt="" /></td>
+              <td><img src="assets/img/overview/ov11.jpg" alt="" /></td>
+              <td><img src="assets/img/overview/ov12.jpg" alt="" /></td>
+              <td><img src="assets/img/overview/ov13.jpg" alt="" /></td>
+              <td><img src="assets/img/overview/ov14.jpg" alt="" /></td>
+            </tr>
+            <tr>
+              <td class="filler"></td>
+              <td><img src="assets/img/overview/ov5.jpg" alt="" /></td>
+              <td><img src="assets/img/overview/ov6.jpg" alt="" /></td>
+            </tr>
+          </table>
+        </div>
+      </div>
+    </div>
+
+    <div class="motion">
+      <div class="middle scroll">
+        <div class="photos">
+          <table>
+            <tr>
+              <th class="filler"></th>
+              <th><img src="assets/img/motion/motion.jpg" alt="" /></th>
+              <th>
+
+                <div><img class="stack" src="assets/img/overview/ov2.jpg" alt="" /></div>
+                <div><img class="stack" src="assets/img/overview/ov3.jpg" alt="" /></div>
+              </th>
+              <th><img src="assets/img/overview/ov3.jpg" alt="" /></th>
+              <th><img src="assets/img/overview/ov4.jpg" alt="" /></th>
+              <th><img src="assets/img/overview/ov5.jpg" alt="" /></th>
+              <th><img src="assets/img/overview/ov6.jpg" alt="" /></th>
+              <th><img src="assets/img/overview/ov7.jpg" alt="" /></th>
+            </tr>
+            <tr>
+              <td class="filler"></td>
+              <td><img src="assets/img/overview/ov8.jpg" alt="" /></td>
+              <td><img src="assets/img/overview/ov9.jpg" alt="" /></td>
+              <td><img src="assets/img/overview/ov10.jpg" alt="" /></td>
+              <td><img src="assets/img/overview/ov11.jpg" alt="" /></td>
+              <td><img src="assets/img/overview/ov12.jpg" alt="" /></td>
+              <td><img src="assets/img/overview/ov13.jpg" alt="" /></td>
+              <td><img src="assets/img/overview/ov14.jpg" alt="" /></td>
+            </tr>
+            <tr>
+              <td class="filler"></td>
+              <td><img src="assets/img/overview/ov5.jpg" alt="" /></td>
+              <td><img src="assets/img/overview/ov6.jpg" alt="" /></td>
+            </tr>
+          </table>
+        </div>
+      </div>
+    </div>
+
+    <div class="about">
+      <div class="middle scroll">
+        <div class="photos">
+          <table>
+            <tr>
+              <th class="filler"></th>
+              <th><img src="assets/img/about/about.jpg" alt="" /></th>
+              <th>
+
+                <div><img class="stack" src="assets/img/overview/ov2.jpg" alt="" /></div>
+                <div><img class="stack" src="assets/img/overview/ov3.jpg" alt="" /></div>
+              </th>
+              <th><img src="assets/img/overview/ov3.jpg" alt="" /></th>
+              <th><img src="assets/img/overview/ov4.jpg" alt="" /></th>
+              <th><img src="assets/img/overview/ov5.jpg" alt="" /></th>
+              <th><img src="assets/img/overview/ov6.jpg" alt="" /></th>
+              <th><img src="assets/img/overview/ov7.jpg" alt="" /></th>
+            </tr>
+            <tr>
+              <td class="filler"></td>
+              <td><img src="assets/img/overview/ov8.jpg" alt="" /></td>
+              <td><img src="assets/img/overview/ov9.jpg" alt="" /></td>
+              <td><img src="assets/img/overview/ov10.jpg" alt="" /></td>
+              <td><img src="assets/img/overview/ov11.jpg" alt="" /></td>
+              <td><img src="assets/img/overview/ov12.jpg" alt="" /></td>
+              <td><img src="assets/img/overview/ov13.jpg" alt="" /></td>
+              <td><img src="assets/img/overview/ov14.jpg" alt="" /></td>
+            </tr>
+            <tr>
+              <td class="filler"></td>
+              <td><img src="assets/img/overview/ov5.jpg" alt="" /></td>
+              <td><img src="assets/img/overview/ov6.jpg" alt="" /></td>
+            </tr>
+          </table>
+        </div>
+      </div>
+    </div>
+
+
   </div>
 
   <!-- prerequisites -->
