--- a/index.html
+++ b/index.html
@@ -65,7 +65,42 @@
   <div class="pages">
     <div class="middle scroll">
       <div class="overview">
-        <table>
+        <div class="column">
+          <div class="row">
+            <img src="assets/img/overview/ov1.jpg">
+            <img src="assets/img/overview/ovgif1.gif">
+            <img src="assets/img/overview/ov4.jpg">
+            <img src="assets/img/overview/ov5.jpg">
+            <img src="assets/img/overview/ov6.jpg">
+            <img src="assets/img/overview/ov7.jpg">
+            <img src="assets/img/overview/ovgif2.gif">
+            <img src="assets/img/overview/ov9.jpg">
+            <img src="assets/img/overview/ov10.jpg">
+            <img src="assets/img/overview/ov2.jpg">
+            <img src="assets/img/overview/ov24.jpg">
+            <img src="assets/img/overview/ov25.jpg">
+            <img src="assets/img/overview/ov27.jpg">
+          </div>
+          <div class="row">
+            <img src="assets/img/overview/ov13.jpg">
+            <img src="assets/img/overview/ov14.jpg">
+            <img src="assets/img/overview/ov19.jpg">
+            <img src="assets/img/overview/ov15.jpg">
+            <img src="assets/img/overview/ov16.jpg">
+            <img src="assets/img/overview/ov17.jpg">
+            <img src="assets/img/overview/ov18.jpg">
+            <img src="assets/img/overview/ov20.jpg">
+            <img src="assets/img/overview/ov21.jpg">
+            <img src="assets/img/overview/ov22.jpg">
+            <img src="assets/img/overview/ovgif3.gif">
+            <img src="assets/img/overview/ov12.jpg">
+            <img src="assets/img/overview/ov11.jpg">
+            <img src="assets/img/overview/ov23.jpg">
+            <img src="assets/img/overview/ov26.jpg">
+          </div>
+        </div>
+
+        <!-- <table>
           <tr>
             <th class="filler"></th>
             <th><img src="assets/img/overview/ov1.jpg" alt="" /></th>
@@ -79,7 +114,7 @@
             <th><img src="assets/img/overview/ov6.jpg" alt="" /></th>
             <th><img src="assets/img/overview/ov7.jpg" alt="" /></th>
           </tr>
-        </table>
+        </table> -->
       </div>
     </div>
   </div>
