--- a/index.html
+++ b/index.html
@@ -53,13 +53,13 @@
   <!-- Side navigation -->
   <div class="sidenav">
     <img class="icon" src="assets/img/logos/Logo.png" alt="">
-    <a class="overview-link"><span>O V E R V I E W</span></a>
-    <a class="fashion-link"><span>F A S H I O N</span></a>
-    <a class="beauty-link"><span>B E A U T Y</span></a>
-    <a class="commissioned-link"><span>C O M M I S S I O N E D</span></a>
-    <a class="cinemagraphsgifs-link"><span>C I N E M A G R A P H S / G I F s</span></a>
-    <a class="motion-link"><span>M O T I O N</span></a>
-    <a class="about-link"><span>A B O U T + C O N T A C T</span></a>
+    <a class="overview-link"><span class="initial-ov">O V E R V I E W</span></a>
+    <a class="fashion-link"><span class="initial-fa">F A S H I O N</span></a>
+    <a class="beauty-link"><span class="initial-be">B E A U T Y</span></a>
+    <a class="commissioned-link"><span class="initial-co">C O M M I S S I O N E D</span></a>
+    <a class="cinemagraphsgifs-link"><span class="initial-gi"> G I F s</span></a>
+    <a class="motion-link"><span class="initial-mo">M O T I O N</span></a>
+    <a class="about-link"><span class="initial-ab">A B O U T + C O N T A C T</span></a>
   </div>
 
   <div class="pages">
