--- a/index.html
+++ b/index.html
@@ -60,6 +60,13 @@
     <a class="cinemagraphsgifs-link"><span class="initial-gi"> G I F s</span></a>
     <a class="motion-link"><span class="initial-mo">M O T I O N</span></a>
     <a class="about-link"><span class="initial-ab">A B O U T + C O N T A C T</span></a>
+    <div class="footer">
+      <div class="social">
+        <a href="#"><img src="assets/img/intro/facebook.jpg"></a>
+        <a href="https://twitter.com/tory_rust"><img src="assets/img/intro/twitter.jpg"></a>
+        <a href="https://www.instagram.com/toryrust/"><img src="assets/img/intro/instagram.jpg"></a>
+      </div>
+    </div>
   </div>
 
   <div class="pages">
@@ -332,18 +339,37 @@
       <div class="motion">
         <div class="column">
           <div class="row">
-          <div class="motion-row">
-            <div class="left">
-              <div class="box">
-                <iframe src="https://player.vimeo.com/video/256801215" width="640" height="360" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
+            <div class="motion-row">
+              <div class="left">
+                <div class="box">
+                  <iframe src="https://player.vimeo.com/video/256801215" width="640" height="360" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
+                </div>
+                <div class="box">
+                  <iframe src="https://player.vimeo.com/video/211606458" width="640" height="360" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
+                </div>
               </div>
-              <div class="box">
-                <iframe src="https://player.vimeo.com/video/211606458" width="640" height="360" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
+              <div class="right">
+                <iframe title="vimeo-player" src="https://player.vimeo.com/video/257625740" width="640" height="800" frameborder="0" allowfullscreen></iframe>
               </div>
             </div>
-            <div class="right">
-              <iframe title="vimeo-player" src="https://player.vimeo.com/video/257625740" width="640" height="800" frameborder="0" allowfullscreen></iframe>
-            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+
+    <!-- About Page -->
+    <div class="middle scroll">
+      <div class="about">
+        <div class="column">
+          <div class="row">
+            <img src="assets/img/about/ab1.jpg" max-width="300">
+            <p class="about-intro">Tory Rust is a Brooklyn-based photographer.
+              <p class="about-words"> Raised in Fargo, North Dakota, she moved to NYC to attend The School of Visual Arts, where she graduated with a masters degree in fashion photography. Her work accurately represents her
+                obsession with saturated colors, high energy and junk food.
+              </p>
+            </p>
+            </p>
           </div>
         </div>
       </div>
@@ -351,17 +377,6 @@
   </div>
 
 
-  <!-- About Page -->
-  <div class="horizon scroll">
-    <div class="about">
-      <div class="column">
-        <div class="row">
-          <img src="assets/img/about/about.jpg">
-        </div>
-      </div>
-    </div>
-  </div>
-  </div>
 
   <!-- prerequisites -->
   <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
