--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <meta charset="utf-8" />
+  <meta content="width=device-width, initial-scale=1" name="viewport" />
   <title>Tory Rust</title>
   <link rel="stylesheet" href="assets/css/stylesheet.css" />
 </head>
