reset to top on refresh

--- a/index.html
+++ b/index.html
@@ -52,14 +52,20 @@
   </div>
   <!-- Side navigation -->
   <div class="sidenav">
-    <img class="icon" src="assets/img/logos/Logo.png" alt="">
-    <a class="overview-link"><span class="initial-ov">O V E R V I E W</span></a>
-    <a class="fashion-link"><span class="initial-fa">F A S H I O N</span></a>
-    <a class="beauty-link"><span class="initial-be">B E A U T Y</span></a>
-    <a class="commissioned-link"><span class="initial-co">C O M M I S S I O N E D</span></a>
-    <a class="cinemagraphsgifs-link"><span class="initial-gi"> G I F s</span></a>
-    <a class="motion-link"><span class="initial-mo">M O T I O N</span></a>
-    <a class="about-link"><span class="initial-ab">A B O U T + C O N T A C T</span></a>
+    <div class="dropdown">
+      <img class="icon" src="assets/img/logos/Logo.png" alt="">
+      <!-- <button class="dropbtn">Dropdown
+      </button> -->
+      <div class="dropdown-content">
+        <a class="overview-link"><span class="initial-ov">O V E R V I E W</span></a>
+        <a class="fashion-link"><span class="initial-fa">F A S H I O N</span></a>
+        <a class="beauty-link"><span class="initial-be">B E A U T Y</span></a>
+        <a class="commissioned-link"><span class="initial-co">C O M M I S S I O N E D</span></a>
+        <a class="cinemagraphsgifs-link"><span class="initial-gi"> G I F s</span></a>
+        <a class="motion-link"><span class="initial-mo">M O T I O N</span></a>
+        <a class="about-link"><span class="initial-ab">A B O U T + C O N T A C T</span></a>
+      </div>
+    </div>
     <div class="footer">
       <div class="social">
         <a href="#"><img src="assets/img/intro/facebook.jpg"></a>
