add link to logo

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
   <!-- Side navigation -->
   <div class="sidenav">
     <div class="dropdown">
-      <img class="icon" src="assets/img/logos/Logo.png" alt="">
+      <a href="https://toryyrust.herokuapp.com/"><img class="icon" src="assets/img/logos/Logo.png" alt=""></a>
       <!-- <button class="dropbtn">Dropdown
       </button> -->
       <div class="dropdown-content">
