--- a/index.html
+++ b/index.html
@@ -21,10 +21,14 @@
 </div>
 <div class="topnav" id="myTopnav">
   <div class="routes">
-    <a href="#home" class="active">Home</a>
-    <a href="#news">News</a>
-    <a href="#contact">Contact</a>
-    <a href="#about">About</a>
+    <a href="#home" class="active">T O R Y  R U S T</a>
+    <a class="overview-link-m"><span>O V E R V I E W</span></a>
+    <a class="fashion-link-m"><span>F A S H I O N</span></a>
+    <a class="beauty-link-m"><span>B E A U T Y</span></a>
+    <a class="commissioned-link-m"><span>C O M M I S S I O N E D</span></a>
+    <a class="cinemagraphsgifs-link-m"><span> G I F s</span></a>
+    <a class="motion-link-m"><span>M O T I O N</span></a>
+    <a class="about-link-m"><span>A B O U T + C O N T A C T</span></a>
   </div>
   <a href="javascript:void(0);" style="font-size:15px;" class="m-icon" onclick="myFunction()">&#9776;</a>
 </div>
