adjust logo for mobile

--- a/index.html
+++ b/index.html
@@ -56,25 +56,6 @@
       <img class="image6" src="assets/img/intro/intro6.jpg" alt="">
       <img class="image7" src="assets/img/intro/intro7.jpg" alt="">
     </div>
-    <!-- <div>
-    <table class="overview">
-      <tr>
-        <th><img src="assets/img/fashion/fashion.jpg" alt="" /></th>
-        <th>
-
-          <div><img class="stack" src="assets/img/overview/ov2.jpg" alt="" /></div>
-          <div><img class="stack" src="assets/img/overview/ov3.jpg" alt="" /></div>
-      </tr>
-      <tr>
-        <td><img src="assets/img/overview/ov8.jpg" alt="" /></td>
-        <td><img src="assets/img/overview/ov9.jpg" alt="" /></td>
-      <tr>
-        <td class="filler"></td>
-        <td><img src="assets/img/overview/ov5.jpg" alt="" /></td>
-        <td><img src="assets/img/overview/ov6.jpg" alt="" /></td>
-      </tr>
-    </table>
-<div> -->
     <!-- intro logo section -->
     <div class="logopage">
       <div class="rustlogo">
@@ -83,6 +64,12 @@
       <div class="torylogo">
         <img src="assets/img/logos/LogoTory.png" alt="">
       </div>
+
+    <div class="ent-logo-m">
+      <img src="assets/img/logos/ent-logo.png" alt="">
+    </div>
+
+
     </div>
   </div>
 
