--- a/index.html
+++ b/index.html
@@ -6,43 +6,44 @@
   <title>Tory Rust</title>
   <link rel="stylesheet" href="assets/css/stylesheet.css" />
 </head>
+
 <body>
 
-<!-- Side navigation -->
-<div class="sidenav">
-  <a href="https://toryyrust.herokuapp.com/"><img class="icon" src="assets/img/logos/Logo.png" alt=""></a>
-  <a class="overview-link"><span class="initial-ov">O V E R V I E W</span></a>
-  <a class="fashion-link"><span class="initial-fa">F A S H I O N</span></a>
-  <a class="beauty-link"><span class="initial-be">B E A U T Y</span></a>
-  <a class="commissioned-link"><span class="initial-co">C O M M I S S I O N E D</span></a>
-  <a class="cinemagraphsgifs-link"><span class="initial-gi"> G I F s</span></a>
-  <a class="motion-link"><span class="initial-mo">M O T I O N</span></a>
-  <a class="about-link"><span class="initial-ab">A B O U T + C O N T A C T</span></a>
-</div>
-<div class="topnav" id="myTopnav">
-  <div class="routes">
-    <a href="#home" class="active">T O R Y  R U S T</a>
-    <a class="overview-link-m"><span>O V E R V I E W</span></a>
-    <a class="fashion-link-m"><span>F A S H I O N</span></a>
-    <a class="beauty-link-m"><span>B E A U T Y</span></a>
-    <a class="commissioned-link-m"><span>C O M M I S S I O N E D</span></a>
-    <a class="cinemagraphsgifs-link-m"><span> G I F s</span></a>
-    <a class="motion-link-m"><span>M O T I O N</span></a>
-    <a class="about-link-m"><span>A B O U T + C O N T A C T</span></a>
+  <!-- Side navigation -->
+  <div class="sidenav">
+    <a href="https://toryyrust.herokuapp.com/"><img class="icon" src="assets/img/logos/Logo.png" alt=""></a>
+    <a class="overview-link"><span class="initial-ov">O V E R V I E W</span></a>
+    <a class="fashion-link"><span class="initial-fa">F A S H I O N</span></a>
+    <a class="beauty-link"><span class="initial-be">B E A U T Y</span></a>
+    <a class="commissioned-link"><span class="initial-co">C O M M I S S I O N E D</span></a>
+    <a class="cinemagraphsgifs-link"><span class="initial-gi"> G I F s</span></a>
+    <a class="motion-link"><span class="initial-mo">M O T I O N</span></a>
+    <a class="about-link"><span class="initial-ab">A B O U T + C O N T A C T</span></a>
   </div>
-  <a href="javascript:void(0);" style="font-size:15px;" class="m-icon" onclick="myFunction()">&#9776;</a>
-</div>
-<script>
-  function myFunction() {
-    var x = document.getElementById("myTopnav");
-    if (x.className === "topnav") {
-      x.className += " responsive";
-    } else {
-      x.className = "topnav";
+  <div class="topnav" id="myTopnav">
+    <div class="routes">
+      <a href="https://toryyrust.herokuapp.com/" class="active">T O R Y R U S T</a>
+      <a class="overview-link-m"><span>O V E R V I E W</span></a>
+      <a class="fashion-link-m"><span>F A S H I O N</span></a>
+      <a class="beauty-link-m"><span>B E A U T Y</span></a>
+      <a class="commissioned-link-m"><span>C O M M I S S I O N E D</span></a>
+      <a class="cinemagraphsgifs-link-m"><span> G I F s</span></a>
+      <a class="motion-link-m"><span>M O T I O N</span></a>
+      <a class="about-link-m"><span>A B O U T + C O N T A C T</span></a>
+    </div>
+    <a href="javascript:void(0);" style="font-size:15px;" class="m-icon" onclick="myFunction()">&#9776;</a>
+  </div>
+  <script>
+    function myFunction() {
+      var x = document.getElementById("myTopnav");
+      if (x.className === "topnav") {
+        x.className += " responsive";
+      } else {
+        x.className = "topnav";
+      }
     }
-  }
-</script>
-<!-- welcome page with photos -->
+  </script>
+  <!-- welcome page with photos -->
 
   <div class="intropage">
     <div class="imgcolumn1">
@@ -65,9 +66,9 @@
         <img src="assets/img/logos/LogoTory.png" alt="">
       </div>
 
-    <div class="ent-logo-m">
-      <img src="assets/img/logos/ent-logo.png" alt="">
-    </div>
+      <div class="ent-logo-m">
+        <img src="assets/img/logos/ent-logo.png" alt="">
+      </div>
 
 
     </div>
@@ -84,7 +85,7 @@
 
   <div class="pages">
     <!-- Overview Page -->
-    <div class="middle scroll">
+    <div id="overview" class="middle scroll">
       <div class="overview">
         <div class="column">
           <div class="row">
@@ -122,8 +123,45 @@
         </div>
       </div>
     </div>
+    <div class="overview-m">
+      <div class="mobile-row">
+        <div class="mobile-column">
+          <img src="assets/img/overview/ov1.jpg">
+          <img src="assets/img/overview/ovgif1.gif">
+          <img src="assets/img/overview/ov4.jpg">
+          <img src="assets/img/overview/ov5.jpg">
+          <img src="assets/img/overview/ov6.jpg">
+          <img src="assets/img/overview/ov7.jpg">
+          <img src="assets/img/overview/ovgif2.gif">
+          <img src="assets/img/overview/ov9.jpg">
+          <img src="assets/img/overview/ov10.jpg">
+          <img src="assets/img/overview/ov2.jpg">
+          <img src="assets/img/overview/ov24.jpg">
+          <img src="assets/img/overview/ov25.jpg">
+          <img src="assets/img/overview/ov27.jpg">
+        </div>
+        <div class="mobile-column">
+          <img src="assets/img/overview/ov13.jpg">
+          <img src="assets/img/overview/ov14.jpg">
+          <img src="assets/img/overview/ov19.jpg">
+          <img src="assets/img/overview/ov15.jpg">
+          <img src="assets/img/overview/ov16.jpg">
+          <img src="assets/img/overview/ov17.jpg">
+          <img src="assets/img/overview/ov18.jpg">
+          <img src="assets/img/overview/ov20.jpg">
+          <img src="assets/img/overview/ov21.jpg">
+          <img src="assets/img/overview/ov22.jpg">
+          <img src="assets/img/overview/ovgif3.gif">
+          <img src="assets/img/overview/ov12.jpg">
+          <img src="assets/img/overview/ov11.jpg">
+          <img src="assets/img/overview/ov23.jpg">
+          <img src="assets/img/overview/ov26.jpg">
+        </div>
+      </div>
+
+    </div>
     <!-- Fashion Page -->
-    <div class="horizon scroll">
+    <div id="fashion" class="horizon scroll">
       <div class="fashion">
         <div class="column">
           <div class="row">
