--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
   <div class="topnav" id="myTopnav">
     <div class="routes">
       <a href="https://toryyrust.herokuapp.com/" class="active">T O R Y R U S T</a>
-      <a class="overview-link-m"><span>O V E R V I E W</span></a>
-      <a class="fashion-link-m"><span>F A S H I O N</span></a>
-      <a class="beauty-link-m"><span>B E A U T Y</span></a>
-      <a class="commissioned-link-m"><span>C O M M I S S I O N E D</span></a>
-      <a class="cinemagraphsgifs-link-m"><span> G I F s</span></a>
-      <a class="motion-link-m"><span>M O T I O N</span></a>
-      <a class="about-link-m"><span>A B O U T + C O N T A C T</span></a>
+      <a class="overview-link-m" onclick="myFunction()"><span>O V E R V I E W</span></a>
+      <a class="fashion-link-m" onclick="myFunction()"><span>F A S H I O N</span></a>
+      <a class="beauty-link-m" onclick="myFunction()"><span>B E A U T Y</span></a>
+      <a class="commissioned-link-m" onclick="myFunction()"><span>C O M M I S S I O N E D</span></a>
+      <a class="cinemagraphsgifs-link-m" onclick="myFunction()"><span> G I F s</span></a>
+      <a class="motion-link-m" onclick="myFunction()"><span>M O T I O N</span></a>
+      <a class="about-link-m" onclick="myFunction()"><span>A B O U T + C O N T A C T</span></a>
     </div>
     <a href="javascript:void(0);" style="font-size:15px;" class="m-icon" onclick="myFunction()">&#9776;</a>
   </div>
@@ -123,7 +123,7 @@
         </div>
       </div>
     </div>
-    <div class="overview-m">
+    <div id="overview-m" class="mobile-page">
       <div class="mobile-row">
         <div class="mobile-column">
           <img src="assets/img/overview/ov1.jpg">
@@ -216,6 +216,59 @@
         </div>
       </div>
     </div>
+      <div id="fashion-m" class="mobile-page">
+        <div class="mobile-row">
+          <div class="mobile-column">
+            <img src="assets/img/fashion/fa1.jpg">
+            <img src="assets/img/fashion/fa2.jpg">
+            <img src="assets/img/fashion/fa3.jpg">
+            <img src="assets/img/fashion/fa7.jpg">
+            <img src="assets/img/fashion/fa8.jpg">
+            <img src="assets/img/fashion/fa9.jpg">
+            <img src="assets/img/fashion/fa13.jpg">
+            <img src="assets/img/fashion/fa14.jpg">
+            <img src="assets/img/fashion/fa18.jpg">
+            <img src="assets/img/fashion/fa19.jpg">
+            <img src="assets/img/fashion/fa23.jpg">
+            <img src="assets/img/fashion/fa24.jpg">
+            <img src="assets/img/fashion/fa25.jpg">
+            <img src="assets/img/fashion/fagif1.gif">
+            <img src="assets/img/fashion/fa29.jpg">
+            <img src="assets/img/fashion/fa30.jpg">
+            <img src="assets/img/fashion/fa31.jpg">
+            <img src="assets/img/fashion/fa35.jpg">
+            <img src="assets/img/fashion/fa36.jpg">
+            <img src="assets/img/fashion/fa37.jpg">
+            <img src="assets/img/fashion/fa41.jpg">
+            <img src="assets/img/fashion/fa42.jpg">
+          </div>
+          <div class="mobile-column">
+            <img src="assets/img/fashion/fa4.jpg">
+            <img src="assets/img/fashion/fa5.jpg">
+            <img src="assets/img/fashion/fa6.jpg">
+            <img src="assets/img/fashion/fa10.jpg">
+            <img src="assets/img/fashion/fa11.jpg">
+            <img src="assets/img/fashion/fa12.jpg">
+            <img src="assets/img/fashion/fa15.jpg">
+            <img src="assets/img/fashion/fa16.jpg">
+            <img src="assets/img/fashion/fa17.jpg">
+            <img src="assets/img/fashion/fa20.jpg">
+            <img src="assets/img/fashion/fa21.jpg">
+            <img src="assets/img/fashion/fa22.jpg">
+            <img src="assets/img/fashion/fa26.jpg">
+            <img src="assets/img/fashion/fa27.jpg">
+            <img src="assets/img/fashion/fa28.jpg">
+            <img src="assets/img/fashion/fa32.jpg">
+            <img src="assets/img/fashion/fa33.jpg">
+            <img src="assets/img/fashion/fa34.jpg">
+            <img src="assets/img/fashion/fa38.jpg">
+            <img src="assets/img/fashion/fa39.jpg">
+            <img src="assets/img/fashion/fa40.jpg">
+            <img src="assets/img/fashion/fa43.jpg">
+            <img src="assets/img/fashion/fagif2.gif">
+          </div>
+        </div>
+    </div>
     <!-- Beauty Page -->
     <div class="horizon scroll">
       <div class="beauty">
@@ -276,6 +329,63 @@
         </div>
       </div>
     </div>
+    <div id="beauty-m" class="mobile-page">
+      <div class="mobile-row">
+        <div class="mobile-column">
+          <img src="assets/img/beauty/VitC.gif">
+          <img src="assets/img/beauty/be1.jpg">
+          <img src="assets/img/beauty/be2.jpg">
+          <img src="assets/img/beauty/be3.jpg">
+          <img src="assets/img/beauty/be7.jpg">
+          <img src="assets/img/beauty/be8.jpg">
+          <img src="assets/img/beauty/be9.jpg">
+          <img src="assets/img/beauty/be13.jpg">
+          <img src="assets/img/beauty/be14.jpg">
+          <img src="assets/img/beauty/be15.jpg">
+          <img src="assets/img/beauty/be19.jpg">
+          <img src="assets/img/beauty/be20.jpg">
+          <img src="assets/img/beauty/be21.jpg">
+          <img src="assets/img/beauty/be25.jpg">
+          <img src="assets/img/beauty/be26.jpg">
+          <img src="assets/img/beauty/be27.jpg">
+          <img src="assets/img/beauty/be31.jpg">
+          <img src="assets/img/beauty/be32.jpg">
+          <img src="assets/img/beauty/be33.jpg">
+          <img src="assets/img/beauty/be37.jpg">
+          <img src="assets/img/beauty/be38.jpg">
+          <img src="assets/img/beauty/be39.jpg">
+          <img src="assets/img/beauty/be43.jpg">
+          <img src="assets/img/beauty/be44.jpg">
+          <img src="assets/img/beauty/be45.jpg">
+        </div>
+        <div class="mobile-column">
+          <img src="assets/img/beauty/be4.jpg">
+          <img src="assets/img/beauty/be5.jpg">
+          <img src="assets/img/beauty/be6.jpg">
+          <img src="assets/img/beauty/be10.jpg">
+          <img src="assets/img/beauty/be11.jpg">
+          <img src="assets/img/beauty/be12.jpg">
+          <img src="assets/img/beauty/be16.jpg">
+          <img src="assets/img/beauty/be17.jpg">
+          <img src="assets/img/beauty/be18.jpg">
+          <img src="assets/img/beauty/be22.jpg">
+          <img src="assets/img/beauty/be23.jpg">
+          <img src="assets/img/beauty/be24.jpg">
+          <img src="assets/img/beauty/be28.jpg">
+          <img src="assets/img/beauty/be29.jpg">
+          <img src="assets/img/beauty/be30.jpg">
+          <img src="assets/img/beauty/be34.jpg">
+          <img src="assets/img/beauty/be35.jpg">
+          <img src="assets/img/beauty/be36.jpg">
+          <img src="assets/img/beauty/begif1.gif">
+          <img src="assets/img/beauty/be40.jpg">
+          <img src="assets/img/beauty/be41.jpg">
+          <img src="assets/img/beauty/be42.jpg">
+          <img src="assets/img/beauty/be46.jpg">
+          <img src="assets/img/beauty/be47.jpg">
+        </div>
+      </div>
+  </div>
     <!-- Commissioned Page -->
     <div class="horizon scroll">
       <div class="commissioned">
