add remaining pages

--- a/index.html
+++ b/index.html
@@ -462,6 +462,78 @@
         </div>
       </div>
     </div>
+    <div id="commissioned-m" class="mobile-page">
+      <div class="mobile-row">
+        <div class="mobile-column">
+          <img src="assets/img/commissioned/co1.jpg">
+          <img src="assets/img/commissioned/co2.jpg">
+          <img src="assets/img/commissioned/co3.jpg">
+          <img src="assets/img/commissioned/co7.jpg">
+          <img src="assets/img/commissioned/co8.jpg">
+          <img src="assets/img/commissioned/co9.jpg">
+          <img src="assets/img/commissioned/co15.jpg">
+          <img src="assets/img/commissioned/co16.jpg">
+          <img src="assets/img/commissioned/co20.jpg">
+          <img src="assets/img/commissioned/co21.jpg">
+          <img src="assets/img/commissioned/co22.jpg">
+          <img src="assets/img/commissioned/co26.jpg">
+          <img src="assets/img/commissioned/co27.jpg">
+          <img src="assets/img/commissioned/co28.jpg">
+          <img src="assets/img/commissioned/co32.jpg">
+          <img src="assets/img/commissioned/co33.jpg">
+          <img src="assets/img/commissioned/cogif3.gif">
+          <img src="assets/img/commissioned/co34.jpg">
+          <img src="assets/img/commissioned/co38.jpg">
+          <img src="assets/img/commissioned/co39.jpg">
+          <img src="assets/img/commissioned/co40.jpg">
+          <img src="assets/img/commissioned/co44.jpg">
+          <img src="assets/img/commissioned/co45.jpg">
+          <img src="assets/img/commissioned/co46.jpg">
+          <img src="assets/img/commissioned/co47.jpg">
+          <img src="assets/img/commissioned/co51.jpg">
+          <img src="assets/img/commissioned/co52.jpg">
+          <img src="assets/img/commissioned/co53.jpg">
+          <img src="assets/img/commissioned/co55.jpg">
+          <img src="assets/img/commissioned/co57.jpg">
+          <img src="assets/img/commissioned/co58.jpg">
+          <img src="assets/img/commissioned/co59.jpg">
+          <img src="assets/img/commissioned/co60.jpg">
+        </div>
+        <div class="mobile-column">
+          <img src="assets/img/commissioned/cogif1.gif">
+          <img src="assets/img/commissioned/co4.jpg">
+          <img src="assets/img/commissioned/co5.jpg">
+          <img src="assets/img/commissioned/co6.jpg">
+          <img src="assets/img/commissioned/co10.jpg">
+          <img src="assets/img/commissioned/co11.jpg">
+          <img src="assets/img/commissioned/co12.jpg">
+          <img src="assets/img/commissioned/co14.jpg">
+          <img src="assets/img/commissioned/co17.jpg">
+          <img src="assets/img/commissioned/co18.jpg">
+          <img src="assets/img/commissioned/co19.jpg">
+          <img src="assets/img/commissioned/co23.jpg">
+          <img src="assets/img/commissioned/cogif2.gif">
+          <img src="assets/img/commissioned/co24.jpg">
+          <img src="assets/img/commissioned/co25.jpg">
+          <img src="assets/img/commissioned/co29.jpg">
+          <img src="assets/img/commissioned/co30.jpg">
+          <img src="assets/img/commissioned/co31.jpg">
+          <img src="assets/img/commissioned/co35.jpg">
+          <img src="assets/img/commissioned/co36.jpg">
+          <img src="assets/img/commissioned/co37.jpg">
+          <img src="assets/img/commissioned/co41.jpg">
+          <img src="assets/img/commissioned/co42.jpg">
+          <img src="assets/img/commissioned/co43.jpg">
+          <img src="assets/img/commissioned/co48.jpg">
+          <img src="assets/img/commissioned/co49.jpg">
+          <img src="assets/img/commissioned/cogif4.gif">
+          <img src="assets/img/commissioned/co50.jpg">
+          <img src="assets/img/commissioned/co54.jpg">
+          <img src="assets/img/commissioned/co56.jpg">
+          <img src="assets/img/commissioned/cogif5.gif">
+        </div>
+      </div>
+  </div>
     <!-- Gif Page -->
     <div class="horizon scroll">
       <div class="cinemagraphsgifs">
@@ -477,7 +549,6 @@
             <img src="assets/img/cinemagraphsgifs/gif17.gif">
             <img src="assets/img/cinemagraphsgifs/gif18.gif">
             <img src="assets/img/cinemagraphsgifs/gif21.gif">
-
           </div>
           <div class="row">
             <img src="assets/img/cinemagraphsgifs/gif3.gif">
@@ -495,6 +566,36 @@
         </div>
       </div>
     </div>
+    <div id="gif-m" class="mobile-page">
+      <div class="mobile-row">
+        <div class="mobile-column">
+          <img src="assets/img/cinemagraphsgifs/gif1.gif">
+          <img src="assets/img/cinemagraphsgifs/gif2.gif">
+          <img src="assets/img/cinemagraphsgifs/gif5.gif">
+          <img src="assets/img/cinemagraphsgifs/gif6.gif">
+          <img src="assets/img/cinemagraphsgifs/gif9.gif">
+          <img src="assets/img/cinemagraphsgifs/gif10.gif">
+          <img src="assets/img/cinemagraphsgifs/gif13.gif">
+          <img src="assets/img/cinemagraphsgifs/gif17.gif">
+          <img src="assets/img/cinemagraphsgifs/gif18.gif">
+          <img src="assets/img/cinemagraphsgifs/gif21.gif">
+
+        </div>
+        <div class="mobile-column">
+          <img src="assets/img/cinemagraphsgifs/gif3.gif">
+          <img src="assets/img/cinemagraphsgifs/gif4.gif">
+          <img src="assets/img/cinemagraphsgifs/gif7.gif">
+          <img src="assets/img/cinemagraphsgifs/gif8.gif">
+          <img src="assets/img/cinemagraphsgifs/gif11.gif">
+          <img src="assets/img/cinemagraphsgifs/gif12.gif">
+          <img src="assets/img/cinemagraphsgifs/gif14.gif">
+          <img src="assets/img/cinemagraphsgifs/gif15.gif">
+          <img src="assets/img/cinemagraphsgifs/gif16.gif">
+          <img src="assets/img/cinemagraphsgifs/gif19.gif">
+          <img src="assets/img/cinemagraphsgifs/gif22.gif">
+        </div>
+      </div>
+  </div>
     <!-- Motion Page  -->
     <div class="middle scroll">
       <div class="motion">
@@ -518,6 +619,14 @@
       </div>
     </div>
 
+    <div id="motion-m" class="mobile-page">
+          <div class="vimeo-mobile">
+            <iframe class="m-video" src="https://player.vimeo.com/video/256801215" width="640" height="360" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
+            <iframe class="m-video" src="https://player.vimeo.com/video/211606458" width="640" height="360" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
+            <iframe class="m-video" title="vimeo-player" src="https://player.vimeo.com/video/257625740" width="640" height="800" frameborder="0" allowfullscreen></iframe>
+          </div>
+  </div>
+
 
     <!-- About Page -->
     <div class="middle scroll">
@@ -530,13 +639,26 @@
                 obsession with saturated colors, high energy and junk food.
               </p>
             </p>
-            </p>
           </div>
         </div>
       </div>
     </div>
-  </div>
 
+    <div id="about-m" class="mobile-page">
+      <div class="mobile-row">
+        <div class="mobile-column">
+          <img src="assets/img/about/ab1.jpg" max-width="300">
+
+        </div>
+        <div class="mobile-column">
+          <p class="about-intro">Tory Rust is a Brooklyn-based photographer.
+            <p class="about-words"> Raised in Fargo, North Dakota, she moved to NYC to attend The School of Visual Arts, where she graduated with a masters degree in fashion photography. Her work accurately represents her
+              obsession with saturated colors, high energy and junk food.
+            </p>
+          </p>
+        </div>
+      </div>
+  </div>
 
 
   <!-- prerequisites -->
