--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
       <div class="beauty">
         <div class="column">
           <div class="row">
-            <img src="assets/img/beauty/VitC.gif">
+            <img src="assets/img/beauty/begif2.gif">
             <img src="assets/img/beauty/be1.jpg">
             <img src="assets/img/beauty/be2.jpg">
             <img src="assets/img/beauty/be3.jpg">
@@ -332,7 +332,7 @@
     <div id="beauty-m" class="mobile-page">
       <div class="mobile-row">
         <div class="mobile-column">
-          <img src="assets/img/beauty/VitC.gif">
+          <img src="assets/img/beauty/begif2.gif">
           <img src="assets/img/beauty/be1.jpg">
           <img src="assets/img/beauty/be2.jpg">
           <img src="assets/img/beauty/be3.jpg">
