add scroll logo and adjust css

--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
 
   <!-- Side navigation -->
   <div class="sidenav">
-    <a href="https://toryyrust.herokuapp.com/"><img class="icon" src="assets/img/logos/Logo.png" alt=""></a>
+    <a href="https://toryyrust.herokuapp.com/"><img class="icon" src="assets/img/logos/ent-logo.png" alt=""></a>
     <a class="overview-link"><span class="initial-ov">O V E R V I E W</span></a>
     <a class="fashion-link"><span class="initial-fa">F A S H I O N</span></a>
     <a class="beauty-link"><span class="initial-be">B E A U T Y</span></a>
     <a class="commissioned-link"><span class="initial-co">C O M M I S S I O N E D</span></a>
-    <a class="cinemagraphsgifs-link"><span class="initial-gi"> G I F s</span></a>
+    <a class="cinemagraphsgifs-link"><span class="initial-gi"> G I F S</span></a>
     <a class="motion-link"><span class="initial-mo">M O T I O N</span></a>
     <a class="about-link"><span class="initial-ab">A B O U T + C O N T A C T</span></a>
   </div>
@@ -29,7 +29,7 @@
       <a class="fashion-link-m" onclick="myFunction()"><span>F A S H I O N</span></a>
       <a class="beauty-link-m" onclick="myFunction()"><span>B E A U T Y</span></a>
       <a class="commissioned-link-m" onclick="myFunction()"><span>C O M M I S S I O N E D</span></a>
-      <a class="cinemagraphsgifs-link-m" onclick="myFunction()"><span> G I F s</span></a>
+      <a class="cinemagraphsgifs-link-m" onclick="myFunction()"><span> G I F S</span></a>
       <a class="motion-link-m" onclick="myFunction()"><span>M O T I O N</span></a>
       <a class="about-link-m" onclick="myFunction()"><span>A B O U T + C O N T A C T</span></a>
     </div>
@@ -63,6 +63,9 @@
     <div class="logopage">
       <div class="rustlogo">
         <img src="assets/img/logos/LogoRust.png" alt="">
+        <div class="scroll-down">
+          <img src="assets/img/intro/scrollop2.jpg" alt="">
+        </div>
       </div>
       <div class="torylogo">
         <img src="assets/img/logos/LogoTory.png" alt="">
@@ -70,16 +73,12 @@
 
       <div class="ent-logo-m">
         <img src="assets/img/logos/ent-logo.png" alt="">
-      </div>
-
 
     </div>
   </div>
 
   <div class="footer">
     <div class="social">
-      <a href="#"><img src="assets/img/intro/facebook.jpg"></a>
-      <a href="https://twitter.com/tory_rust"><img src="assets/img/intro/twitter.jpg"></a>
       <a href="https://www.instagram.com/toryrust/"><img src="assets/img/intro/instagram.jpg"></a>
     </div>
   </div>
@@ -102,7 +101,6 @@
             <a href="assets/img/overview/ov10.jpg" data-lightbox="overview"><img src="assets/img/overview/ov10.jpg"></a>
             <a href="assets/img/overview/ov2.jpg" data-lightbox="overview"><img src="assets/img/overview/ov2.jpg"></a>
             <a href="assets/img/overview/ov24.jpg" data-lightbox="overview"><img src="assets/img/overview/ov24.jpg"></a>
-            <a href="assets/img/overview/ov25.jpg" data-lightbox="overview"><img src="assets/img/overview/ov25.jpg"></a>
             <a href="assets/img/overview/ov27.jpg" data-lightbox="overview"><img src="assets/img/overview/ov27.jpg"></a>
           </div>
           <div class="row">
