--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
             <a href="assets/img/beauty/begif2.gif" data-lightbox="beauty"><img src="assets/img/beauty/begif2.gif"></a>
             <a href="assets/img/beauty/be1.jpg" data-lightbox="beauty"><img src="assets/img/beauty/be1.jpg"></a>
             <a href="assets/img/beauty/be2.jpg" data-lightbox="beauty"><img src="assets/img/beauty/be2.jpg"></a>
-              <a href="assets/img/beauty/be3.jpg" data-lightbox="beauty"><img src="assets/img/beauty/be3.jpg"></a>
+              <a href="assets/img/beauty/b13.jpg" data-lightbox="beauty"><img src="assets/img/beauty/b13.jpg"></a>
               <a href="assets/img/beauty/be7.jpg" data-lightbox="beauty"><img src="assets/img/beauty/be7.jpg"></a>
             <a href="assets/img/beauty/be8.jpg" data-lightbox="beauty"><img src="assets/img/beauty/be8.jpg"></a>
             <a href="assets/img/beauty/be9.jpg" data-lightbox="beauty"><img src="assets/img/beauty/be9.jpg"></a>
@@ -303,7 +303,7 @@
           <div class="row">
             <a href="assets/img/beauty/be4.jpg" data-lightbox="beauty"><img src="assets/img/beauty/be4.jpg"></a>
             <a href="assets/img/beauty/be5.jpg" data-lightbox="beauty"><img src="assets/img/beauty/be5.jpg"></a>
-            <a href="assets/img/beauty/be6.jpg" data-lightbox="beauty"><img src="assets/img/beauty/be6.jpg"></a>
+            <a href="assets/img/beauty/b08.jpg" data-lightbox="beauty"><img src="assets/img/beauty/b08.jpg"></a>
             <a href="assets/img/beauty/be10.jpg" data-lightbox="beauty"><img src="assets/img/beauty/be10.jpg"></a>
             <a href="assets/img/beauty/be11.jpg" data-lightbox="beauty"><img src="assets/img/beauty/be11.jpg"></a>
             <a href="assets/img/beauty/be12.jpg" data-lightbox="beauty"><img src="assets/img/beauty/be12.jpg"></a>
